add front-end logic

--- a/index.html
+++ b/index.html
@@ -13,23 +13,17 @@
       <div class="row">
         <div class="col-md-3">
           <form id="user-input">
-
             <label for="task">Enter a task</label>
             <input id="task" type="text" required="true">
-
             <button id="submit" type="submit" name="button">Submit</button>
           </form>
-
         </div>
         <div class="col-md-9">
           <h1>To Do List</h1>
-          <ul class="result">
-
-          </ul>
+          <h6>Doubleclick to remove an item</h6>
+          <ul class="result"></ul>
         </div>
       </div>
-
     </div>
-
   </body>
 </html>
